# MagentiX

./: .env.example  .gitignore  RAEDME.md  README.md  package.json  pnpm-lock.yaml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
